--- a/church-encoding/package.yaml
+++ b/church-encoding/package.yaml
@@ -7,6 +7,7 @@ maintainer:          "example@example.com"
 copyright:           "2021 Author name here"
 
 extra-source-files:
+- README.md
 
 
 # Metadata used when publishing your package
